--- a/index.html
+++ b/index.html
@@ -3,11 +3,29 @@
 
 <head>
 	<meta charset="UTF-8" />
-	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-	<title>Template Project</title>
+	<title>Shooter Game</title>
+  <style>
+    body {
+      padding: 0;
+      margin: 0;
+    }
+    canvas {
+      width: 100%;
+    }
+    @font-face {
+      font-family: 'CurseCasual';
+      src: url('fonts/CurseCasual.ttf');
+    }
+    .fontPreload {
+      font-family: 'CurseCasual';
+      position: absolute;
+      left: -100px;
+    }
+  </style>
 </head>
 
 <body>
+  <div class="fontPreload">.</div>
 	<div id="app"></div>
 	<script type="module" src="src/main.ts"></script>
 </body>
